--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "spinel-serial-camera",
   "version": "1.0.0",
   "description": "Node.js package for Spinel serial camera",
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/strongestweapon/spinel-serial-camera/issues"
   },
-  "homepage": "https://github.com/strongestweapon/spinel-serial-camera#readme"
+  "homepage": "https://github.com/strongestweapon/spinel-serial-camera#readme",
+  "dependencies": {
+    "serialport": "^12.0.0"
+  }
 }
